--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -35,6 +35,12 @@
   <input [(ngModel)]="user.email"
          placeholder="email"
          class="form-control"/>
+    <input [(ngModel)]="user.phone"
+           placeholder="phone"
+           class="form-control"/>
+    <input [(ngModel)]="user.address"
+           placeholder="Address"
+           class="form-control"/>
   <button (click)="update(user)"
           class="btn btn-primary btn-block">
     Update
